# indigo-smart

./: .gitignore  README.md
smart-app/: pyproject.toml
smart-app/src/smart_app/: config.py  db.py  main.py  models.py
smart-app/src/smart_app/routes/: dashboard.py  sensors.py
smart-board/src/: routes.js
smart-board/src/components/icons/: SignIn.jsx
smart-board/src/components/navbar/: RTL.jsx  index.jsx
smart-board/src/components/sidebar/: RTL.jsx  index.jsx
smart-board/src/components/sidebar/components/: SidebarCard.jsx
smart-board/src/components/sidebar/componentsrtl/: SidebarCard.jsx
smart-board/src/layouts/auth/: index.jsx
smart-board/src/variables/: charts.js
smart-board/src/views/admin/default/: index.jsx
smart-board/src/views/admin/default/components/: ComplexTable.jsx  TemperatureChart.jsx
smart-board/src/views/admin/tables/: index.jsx
smart-board/src/views/admin/tables/components/: ComplexTable.jsx
smart-board/src/views/auth/: SignIn.jsx
smart-board/src/views/rtl/default/: index.jsx
smart-board/src/views/rtl/default/components/: TemperatureChart.jsx
